css/style.css
/*http://angrytools.com/gradient/*/
/* https://codepen.io/themalni/full/jVLmQR/ */

html,
body{
 background-color: #6441a4;
 font-family: 'Play', sans-serif; 
 margin: 0;
 /* to keep footer at bottom of page*/
 padding:0;
 height:100%;
}

.container{
  text-align: center;
  margin: auto;
  color: white;
  width: 100%;
   /* to keep footer at bottom of page*/
  min-height:100%;
  position:relative;
  padding-bottom: 150px;
}

.header{
  background-color: white;
  font-size: 18px;
}


.header_img{
  height: 100px;
  width: 300px;
  padding-top: 2%;
}

#title{
  color: #6441a4;
}


.well{
  max-width: 1000px;
  width: 90%;
  margin: auto;
}

#nav{
  height: 50px;
  max-width: 1000px;
  width: 90%;
  margin: auto; 
}

button{
  color: white;
  font-size: 14px;
  width: 32%;
  padding: 12px 0px;
  background-color: #7d5bbe;
  opacity: 1;
  cursor:pointer;
  margin-right: 2%;
  border: 0;
  float: left;
  -webkit-appearance: none;
}

#showAllBtn{
  background-color:#76daff;
}

button:focus{
  outline: 0;
}

button::-moz-focus-inner {
  border: 0;
}

button:nth-child(3n) {
 margin-right: 0;
}

#channelsList{
  padding-top: 10px;
  margin:auto;
  list-style:none;
  padding-left:0 !important;
  display: -webkit-flex; /* Safari */
  -webkit-flex-wrap: wrap; /* Safari 6.1+ */
  display: flex !important;   
  flex-wrap: wrap;
  clear: left; 
}

.single_channel{
  width: 32%;
  margin-right: 2%;
  float:left;
  height: 200px;
  margin-top: 15px;
  text-align: left;
  border-style: solid;
  border-color: #7d5bbe;
  border-width: thick;
  box-sizing: border-box;
  position: relative;
}

.single_channel:nth-child(3n) {
   margin-right: 0;
  }

.cover-overlay{
  background: #7d5bbe;
  position: absolute;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  border-bottom-style: solid;
  border-bottom-width: thin;
  top: 0;
  left: 0;
  opacity: 0;
  width: 100%;
  height: 75%;
 
}

.cover-overlay.online{
  border-bottom-color: green;
}

.cover-overlay.offline{
  border-bottom-color: red;
}

.streaming_details{
  margin: 5px;
  color: white;
   word-wrap: break-word;
}
 
/*rename element as channel_url class */
a:link {
  text-decoration: none;
  outline:none;
  border:0;
}

.channel_prev-img{
    width: 100%;
    height: 75%;
   background-color: #6441a4;
    
}

.prev_img_src{
   width: 100%;
  height: 100%;
}

.user_info{
  background-color: #7d5bbe;
  height: 25%;
  position: relative;
}

.user_name{
  color:white;
  word-wrap: break-word;
}

.user_img{
  width: 35px;
  height: 35px;
  margin-right: 5px;
  padding-top: 5px;
}

.user_name, .status_offline, .status_online, .status_invalid{
 position: absolute;
 top:30%;
}

.status_offline, .status_online, .status_invalid{
  right:0;
}

.status_online{
  color: green;
}

.status_offline{
  color: red;
}

.status_invalid{
  color: gray;
}

/*Inspired by http://www.cssreset.com/demos/layouts/how-to-keep-footer-at-bottom-of-page-with-css/ */
#footer {
  background: white; 
  color: #7d5bbe;
  font-size: 18px;
  width:100%;
  height:40px;
  padding: 30px 0;
  position:absolute;
  text-align: center;
  bottom:0;
  left:0;
}

#footer  a{
    color: #7d5bbe;
    font-weight: bold !important;
 }

@media only screen and (max-width: 830px) {
  .single_channel{
    width: 49%;
    height: 200px;
  } 
  
  .single_channel:nth-child(3n) {
   margin-right: 2%;
  }
  
  .single_channel:nth-child(2n) {
    margin-right: 0 !important;
  }
}

@media only screen and (max-width: 550px) {
  .single_channel{
    width: 100%;
    min-height: 100px;
  }
  .single_channel:nth-child(n) {
    margin-right: 0;
  }

